add files array to package.json

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "tailwindcss",
     "nord"
   ],
+  "files": [
+    "index.js"
+  ],
   "author": "Daniel Crewdson <danielcrewdson@gmail.com>",
   "license": "ISC",
   "devDependencies": {
