--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "tailwindcss",
     "nord"
   ],
+  "homepage": "https://github.com/crumb1e/tailwind-nord",
   "files": [
     "index.js"
   ],
@@ -19,5 +20,9 @@
   "license": "ISC",
   "devDependencies": {
     "tailwindcss": "^1.2.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/crumb1e/tailwind-nord.git"
   }
 }
